8251966: [lworld] TestArrays.java fails with -XX:+ExpandSubTypeCheckAtParseTime