src/hotspot/share/opto/subnode.cpp
@@ -977,6 +977,14 @@ const Type *CmpPNode::sub( const Type *t1, const Type *t2 ) const {
             (r1->flatten_array() && (!r0->can_be_inline_type() || (klass0->is_inlinetype() && !klass0->flatten_array())))) {
           // One type is flattened in arrays but the other type is not. Must be unrelated.
           unrelated_classes = true;
+        } else if ((r0->is_not_flat() && klass1->is_flat_array_klass()) ||
+                   (r1->is_not_flat() && klass0->is_flat_array_klass())) {
+          // One type is a non-flattened array and the other type is a flattened array. Must be unrelated.
+          unrelated_classes = true;
+        } else if ((r0->is_not_null_free() && klass1->is_obj_array_klass() && klass1->as_obj_array_klass()->element_klass()->is_inlinetype()) ||
+                   (r1->is_not_null_free() && klass0->is_obj_array_klass() && klass0->as_obj_array_klass()->element_klass()->is_inlinetype())) {
+          // One type is a non-null-free array and the other type is a null-free array. Must be unrelated.
+          unrelated_classes = true;
         }
       }
       if (unrelated_classes) {
